2009-Aug-12	weaver	Tag V01-00-02 for production release.
2009-Aug-11	jackp	Moved production code out of devtest into new package called dev.
2009-Aug-4	weaver	Fixed xtc file viewing in configdb_gui.  Added read-replace and
			read-append buttons for creating new xtcs (replacing configuration
			cycles or appending them).
2009-Jul-22	weaver	Tag V01-00-01. Synchronized with pds V01-00-01.  
			Configdb fixes to file permissions, hexadecimal integer support,
			viewing.
			RunControl fixes to EPICS interface, configuration.
2009-Jul-21	jackp	Added monshmserver
2009-Jul-17	jackp	Changed DetInfo reference in segtest.cc to pnCCDframe and added devtest/xtctruncate
2009-Jul-14	weaver	Tag V01-00-00. Consistent with pds V01-00-00.  Added pdsapp/control
2009-Jul-10     cpo     Support for configuration of acqiris from database
01-Jul-2009	weaver  config - added view only option to configdb_gui
22-Jun-2009	weaver  config - fixed early delete of ParameterSet objects.
01-Jun-2009	weaver	Added test/control as a model for run control sequencer.
16-Apr-2009	weaver	Fixed some bugs in configdb_gui (always generated new keys).
			Added Pulnix TM6740CL to configdb_gui and devtest/tm6740.
			Added -d option to devtest/evr to simulate dropped evr multicasts.
			Added vmon archiving.  Added error message from test/StatsApp to
			note out-or-order pulse ids (except on rollover).
			Added ClearReadout occurrence handling in test/controltest to
			automatically 'disable'.
 3-Apr-2009     cpo     Fix some acqiris voltage calculation bugs.
31-Mar-2009	weaver	Tag V00-08-00. Tracks pds V00-08-00.  Moved camtest.cc to
			devtest/opal1k.cc.  Added vmondisplay.
24-Mar-2009     cpo     Tag V00-07-03. Remove xtcreader from pdsapp.
24-Mar-2009     cpo     Tag V00-07-02. Removed xtcreader dependencies.
                        Cleaned up voltage calculations in AcqDisplay.
24-Mar-2009     cpo     Tag V00-07-01. Add monitoring support for acqiris